[package]
name = "spin-seq"
version = "0.2.0"
edition = "2021"
authors = ["Amanieu d'Antras <amanieu@gmail.com>", "Kenneth G. Strawn <kenny.strawn@gmail.com>"]
description = "Fork of the `seqlock` crate that can be used on bare metal."
license = "Apache-2.0/MIT"
repository = "https://github.com/Amanieu/seqlock"
readme = "README.md"
keywords = ["seqlock", "rwlock", "thread"]

[dependencies]
spin = "0.9.8"

